<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/convert_from_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/switch_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_from" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_value"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/input_value"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <Spinner
                    android:id="@+id/spinner_from"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/spinner_from_description" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/switch_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/switch_button_description"
            android:drawingCacheQuality="high"
            android:focusable="false"
            app:cornerRadius="512dp"
            app:icon="@android:drawable/ic_popup_sync"
            app:layout_constraintBottom_toTopOf="@+id/convert_to_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convert_from_group" />

        <LinearLayout
            android:id="@+id/convert_to_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/convert_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_button">

            <TextView
                android:id="@+id/textView_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_to" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/output_value"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/output_value"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <Spinner
                    android:id="@+id/spinner_to"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/spinner_to_description" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:focusable="false"
            android:text="@string/convert_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convert_to_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>